--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
     "activedirectory": "^0.7.2",
+    "activedirectory2": "^2.1.0",
+    "ad": "^0.3.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "class-transformer": "^0.5.1",
@@ -30,6 +32,7 @@
     "handlebars": "^4.7.7",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "ldapjs": "^2.3.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -39,6 +42,8 @@
     "nodemailer": "^6.8.0",
     "nodemailer-sendinblue-transport": "^2.0.0",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-activedirectory": "^1.0.4",
     "request": "^2.88.2",
     "typeorm": "^0.3.10",
     "util": "^0.12.5",
