--- a/package.json
+++ b/package.json
@@ -13,28 +13,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/msal-node": "^1.14.5",
     "@faker-js/faker": "^7.6.0",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/git": "^10.0.1",
-    "activedirectory": "^0.7.2",
-    "activedirectory2": "^2.1.0",
-    "ad": "^0.3.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
-    "ldap-authentication": "^2.3.2",
-    "ldapauth-fork": "^5.0.5",
-    "ldapjs": "^2.3.3",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
